# DiskGNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md
examples/: autorun.sh  batched_packing.py  dataset.py  disk_cache_overlap.py  feat_deduplicate_bucket.py  feat_deduplicate_bucket_subg.py  feat_deduplicate_disk_cache.py  feat_deduplicate_disk_cache_2.py  feat_map_reduce_packing.py  feat_packing.py  load_graph.py  mega_batch_sampling.py  megabatch_train_single_thread.py  merge_minibatch_packing.py  merge_minibatch_sample.py  merge_minibatch_train_single_thread.py  model.py  output21.txt  overlap_feat_packing.py  prepare_dataset.py  run.sh  run_blowup.sh  run_cache_mem.sh  run_disk_cache_effect.sh  run_gcn_model.sh  run_micro_change_disk.sh  run_micro_single_thread.sh  run_papers.sh  run_pipelining.sh  run_products.sh  run_search_method.sh  run_temp.sh  runner.py  sampling.py  search_method.py  test.py  test_duplicate.py  train.py  train_multi_process.py  train_multi_thread.py  (+5 more)
examples/acc/: run.sh  runner_acc.py  train_offline.py  train_online.py
examples/access_skewness/: run.sh  skewness.py
examples/cachemem_blowup/: cachemem_blowup.py  cachemem_blowup_fs_ig.csv  run.sh
examples/dgl_baseline/: dgl_mmap.py  dgl_on_disk.csv  dgl_on_disk.py  micro_change_disk.sh  run_dgl_on_disk.sh
examples/disk_blowup/: batchsize_blowup.py  batchsize_blowup_fs_ig.csv  cachemem_blowup.py  cachemem_blowup_fs_ig.csv  fanout_blowup.py  fanout_blowup_fs_ig.csv  run.sh
examples/hetero/: feat_packing.py  prepare_dataset.py  run.sh  sampling.py  train_multi_thread.py
examples/merge_util/: tree.ipynb  util.ipynb
examples/micro_load_io/: io_load.csv  run.sh  run_single_thread.py
examples/plot_utils/: draw_disk_cache.py  draw_utils.py
examples/shadowgnn/: feat_packing.py  run.sh  sampling.py  train_multi_thread.py
offgs_plot/: Graph_NN_Benchmarks.csv  Graph_NN_Benchmarks_new.csv  draw_complex.py  draw_simple_off.py  draw_speed.py
offgs_plot/offgs_data/: batchsize_blowup.csv  breakdown_method1.csv  breakdown_method2.csv  cache_blowup.csv  change_disk.csv  fanout_blowup.csv  feat_packing.csv  read_io_new.csv  trainpipe_breakdown.csv  vary_cache.csv
offgs_plot/offgs_draw/: draw_breakdown_method1.py  draw_breakdown_method2.py  draw_epoch2acc.py  draw_preprocess_decompose.py  draw_time2acc.py  draw_utils.py  main_fanout_batchsize_blowup.py  main_mem_size_blowup.py  main_varymem.py  main_varymem_camera_ready.py  micro_breakdown_method2.py  micro_change_disk.py  micro_draw_nodes_loading.py  micro_nodes_loading.py  micro_trainpipe_breakdown.py  new_change_mem_disk.py  off_main_w_split_bar.py
offgs_plot/offgs_old/: draw_preprocess.py
offgs_plot/offgs_preprocess/: deal_w_vary_mem.py  deal_with_data_e2e.py
preliminary/: graphsage.py  graphsage_offlinesample.py  ladies.py  ladies_offlinesample.py  load_graph.py  model.py  plot.ipynb  testbench.sh  testbench2.sh
preliminary/feat_pack/: graph_pack.py  micro_func.ipynb  overlap_binary_tree_packing.py  overlap_feat_packing.py  overlap_graph_SSD_new.py  overlap_graph_packing.py  overlap_n_tree.py  overlap_n_tree_fs.py  overlap_n_tree_tune.py
preliminary/graph/: feature_blow_up.py  feature_blow_up_all_nodes.py  graph_metadata.py  graphsage_offlinesample.py  load_graph.py  model.py  neighbor_field.py  run.sh  sampling_locality.py  sampling_skewness.py  test.py  (+3 more)
python/: setup.py
scripts/: find_torch.py
src/: free.cc  free.h  gather.cc  gather.h  load.cc  load.h  pybind.cc  save.cc  save.h  state.h  utils.h
(+130 files in other folders)
